--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Django==1.7.1
-django-nose==1.2
+-e git://github.com/django-nose/django-nose.git@154b663097e8f3131fe5d1cdd8a8df2e388450ac#egg=django_nose-dev
 gnureadline==6.3.3
+gunicorn==19.1.1
 ipdb==0.8
 ipython==2.3.1
 nose==1.3.4
